# ipc

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/tcpExample/: CMakeLists.txt  client.cpp  server.cpp
examples/templatedApiExample/: CMakeLists.txt  client.cpp  interface.h  server.cpp
examples/udpExample/: CMakeLists.txt  client.cpp  server.cpp
examples/unixExample/: CMakeLists.txt  client.cpp  server.cpp
include/: serializable.h  serverInterface.h  socket.h  tcp.h  templatedClientApi.h  templatedServerApi.h  udp.h  unix.h
src/: socket.cpp  tcpClient.cpp  tcpServer.cpp  udpSocket.cpp  unixClient.cpp  unixServer.cpp
tests/: main.cpp
